--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/logo_mobile.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
 
     <title>Contacto</title>
@@ -12,39 +13,52 @@
 <body>
 
     <!– Menu de navegación –>
-    <header class="headerDark">
-        <div class="logo">
-            <a href="../index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
-        </div>
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Audiovisual.html">Audiovisual</a></li>
-                <li><a href="diseno.html">Diseño web</a></li>
-                <li><a href="proyectos.html">Nuestros proyectos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Audiovisual.html">Audiovisual</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="diseno.html">Diseño web</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="proyectos.html">Nuestros proyectos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
             </ul>
-        </nav>
-    </header>
+          </div>
+        </div>
+    </nav>
 
 
 
     <!– Módulo principal –>
     <main class="mainDark">
-        <h1 class="light">No busques más, <span class="secondary">que estamos aquí :-)</span></h1>
-            <div>
-                <div>
-                    <p><b>Somos todo oídos, orejas y cerebros y,</b> como la gente que te ayuda, estamos donde necesites. Listos y dispuestos para tomar un café, charlar y echarte una mano.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                <h1 class="light" style="text-align: center;">No busques más, <span class="secondary">que estamos aquí :-)</span></h1>
+                <div class="row">
+                    <div class="col-lg-2 col-md-1 col-sm-1">
+                        <p><b>Somos todo oídos, orejas y cerebros y,</b> como la gente que te ayuda, estamos donde necesites. Listos y dispuestos para tomar un café, charlar y echarte una mano.</p>
+                    </div>
+                    <div class="col-lg-2 col-md-1 col-sm-1">
+                        <p>Escríbinos desde aquí o, si lo preferís:</p>
+                        <p>Llámanos al <a href="">+541163236763</a></p>
+                        <p>Escríbenos a <a href="">manijastudio@gmail.com</a></p>
+                    </div>
                 </div>
-                <div>
-                    <p>Escríbinos desde aquí o, si lo preferís:</p>
-                    <p>Llámanos al <a href="">+541163236763</a></p>
-                    <p>Escríbenos a <a href="">manijastudio@gmail.com</a></p>
-                </div>
-            </div>
-
-            <div>
                 <form action="">
                     <div>
                         <div>
@@ -65,17 +79,21 @@
                     </div>
                     <button type="submit">Enviar</button>
                 </form>
+                </div>
             </div>
+    </div>
     </main>
 
 
 
     <!– Footer –>
     <footer>
-        <div>
+        <div class="container">
+        <div class="row">
+        <div class="logo col-lg-2 col-md-1 col-sm-1">
             <a href="../index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
         </div>
-        <div>
+        <div class="col-lg-2 col-md-1 col-sm-1">
             <ul>
                 <li><a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href="" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
@@ -86,6 +104,11 @@
             </ul>
             <p class="dark">Todos los derechos están torcidos 2023 © Manija Studio</p>
         </div>
+    </div>
+    </div>
     </footer>
-</body>
-</html>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    </body>
+    </html>
