Se ajustaron los componentes responsive, se implemento scss, seo, animaciones, filtros de color y efectos desde librerias cdn de animaciones css

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -2,10 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="¿Querés ver nuestros trabajos?, aca te damos una muestra de lo que hicimos.">
+    <meta name="keywords" content="diseño, web, fotomontaje, gifs, ilustración, branding, logos, videos, animaciones">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/logo_mobile.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../estilos.css">
 
     <title>Proyectos</title>
@@ -15,29 +18,29 @@
     <!– Menu de navegación –>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="../index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Audiovisual.html">Audiovisual</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="diseno.html">Diseño web</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="proyectos.html">Nuestros proyectos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Audiovisual.html">Audiovisual</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="diseno.html">Diseño web</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="proyectos.html">Nuestros proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -45,45 +48,45 @@
     <main>
     <div class="container">
         <div class="row">
-        <div class="contenedor col-lg-2 col-md-2 col-sm-1">
-            <h1> Recién horneados. <span class="secondary">Nuestros proyectos destacados</span></h1>
-            <div>
+            <div class="contenedor col-lg-2 col-md-2 col-sm-1">
+                <h1> Recién horneados. <span class="secondary animate__animated animate__fadeIn">Nuestros proyectos destacados</span></h1>
                 <div>
-                    <p class="dark">Descubre más sobre cómo hacemos lo que hacemos para marcas que saben lo que hacen. Selecciona o filtra entre lo que buscas entre nuestros proyectos de comunicación, branding, publicidad o diseño.</p>
-                </div>
+                    <div>
+                        <p class="dark">Descubre más sobre cómo hacemos lo que hacemos para marcas que saben lo que hacen. Selecciona o filtra entre lo que buscas entre nuestros proyectos de comunicación, branding, publicidad o diseño.</p>
+                    </div>
 
-                <form class="formulario" action="">
-                    <div>
-                        <p class="etiqueta">Solicita tu consultoría gratis</p>
-                    </div>
-                    <div>
-                        Nombre<br><input type="Nombre">
-                    </div>
-                    <div>
-                        Mail<br><input type="email" name="Mail" id="">
-                    </div>
-                    <div class="checkbox">
-                        <input type="checkbox" name="" id="">
-                        <p class="dark">Aceptas que Manija Studio use los datos que proporcionaste para poder enviarte correos electrónicos.</p>
-                    </div>
-                    <div>
-                        <button type="submit">Enviar</button>
-                    </div>
-                </form>
+                    <form class="formulario" action="">
+                        <div>
+                            <p class="etiqueta">Solicita tu consultoría gratis</p>
+                        </div>
+                        <div>
+                            Nombre<br><input type="Nombre">
+                        </div>
+                        <div>
+                            Mail<br><input type="email" name="Mail" id="">
+                        </div>
+                        <div class="checkbox">
+                            <input type="checkbox" name="" id="">
+                            <p class="dark">Aceptas que Manija Studio use los datos que proporcionaste para poder enviarte correos electrónicos.</p>
+                        </div>
+                        <div>
+                            <button type="submit">Enviar</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-        <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-            <img src="../images/imagen_46.webp" alt="">
-        </div>
+            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+                <img src="../images/imagen_46.webp" alt="Imagen de un fotomontaje de nuestros proyectos">
+            </div>
         </div>
     </div>
 </main>
 
 
-    <!– Noticias –>
-    <div class="noticias">
-        <p>Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - </p>
-    </div>
+<!– Noticias –>
+<marquee class="noticias">
+    <p> - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - </p>
+</marquee>
 
 
     <!– Módulo 1 –>
@@ -136,7 +139,7 @@
   <!– Módulo 3 –>
   <section class="modulo3">
       <div class="titleModulo3">
-          <p class="maintitleDark">Sólo hacemos cuatro cosas, pero... <span class="secondary">¡qué cuatro cosas!</span></p>
+          <p class="maintitleDark">Sólo hacemos cuatro cosas, pero... <span class="secondary animate__animated animate__fadeIn">¡qué cuatro cosas!</span></p>
           <p class="dark">Descubre más sobre los servicios que ofrecemos para ayudar a empresas en estrategia, diseño, comunicación y tecnología.</p>
       </div>
 
@@ -188,12 +191,12 @@
 
     <div class="servicios container">
         <div class="row">
-        <div class="col-lg-3 col-md-1 col-sm-1">
-            <p class="maintitleDark">Nuestros servicios como <span class="secondary">agencia de branding</span></p>
+        <div class="col-lg-3 col-md-2 col-sm-1">
+            <p class="maintitleDark">Nuestros servicios como <span class="secondary animate__animated animate__fadeIn">agencia de branding</span></p>
             <p class="dark">Descubre más sobre los servicios que ofrecemos para ayudar a empresas en estrategia, diseño, comunicación y tecnología.</p>
         </div>
 
-        <div class="col-lg-3 col-md-1 col-sm-1">
+        <div class="col-lg-3 col-md-2 col-sm-1">
             <ul>
                 <li>Consultoría y estrategia de marca</li>
                 <li>Diseño de logotipos</li>
@@ -205,7 +208,7 @@
             </ul>
         </div>
 
-        <div class="col-lg-3 col-md-1 col-sm-1">
+        <div class="col-lg-3 col-md-2 col-sm-1">
             <ul>
                 <li>Identidad visual</li>
                 <li>Diseño de identidad corporativa</li>
@@ -230,12 +233,12 @@
     </div>
     <div class="col-lg-2 col-md-1 col-sm-1">
         <ul>
-            <li><a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
+            <li><a href="https://www.instagram.com/manijastudio/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com/@manijastudio" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href="https://twitter.com/ManijaStudio" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/studiomanija" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/manija-studio/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.behance.net/manijastudio" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
         </ul>
         <p class="dark">Todos los derechos están torcidos 2023 © Manija Studio</p>
     </div>
