--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Rapidito: somos una agencia creativa digital especializada en branding, comunicación, publicidad y diseño web para marcas inolvidables.">
+    <meta name="keywords" content="agencia, creativa, digital, diseño, publicidad, branding, comunicación, diseño web, video, animación">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logo_mobile.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="estilos.css">
+
 
     <title>Manija Studio</title>
 </head>
@@ -49,7 +53,7 @@
     <div class="container">
         <div class="row">
         <div class="contenedor col-lg-2 col-md-2 col-sm-1">
-            <h1><span class="secondary">La agencia de branding</span> que te ayuda a transformar empresas en marcas y planes de negocio en historias con propósito.</h1>
+            <h1><span class="secondary animate__animated animate__fadeIn">La agencia de branding</span> que te ayuda a transformar empresas en marcas y planes de negocio en historias con propósito.</h1>
             <div>
                 <div>
                     <p class="dark">Descubre cómo trabajamos desde la narrativa y el diseño estratégico para crear, rediseñar y pensar marcas que aportan valor, cumplen objetivos y conquistan públicos.</p>
@@ -75,8 +79,8 @@
                 </form>
             </div>
         </div>
-        <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-            <img src="images/imagen_1.webp" alt="">
+        <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+            <img src="images/imagen_1.webp" alt="Imagen de un fotomontaje de branding">
         </div>
     </div>
     </div>
@@ -84,9 +88,9 @@
 
 
     <!– Noticias –>
-    <div class="noticias">
-        <p>Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - </p>
-    </div>
+    <marquee class="noticias">
+        <p> - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - </p>
+    </marquee>
 
 
     <!– Módulo 1 –>
@@ -94,13 +98,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/imagen_2.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_2.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de fotografía">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_3.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_3.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_4.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_4.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de video">
               </div>
             </div>
           </div>
@@ -108,13 +112,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/imagen_5.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_5.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_6.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_6.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de fotografía">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_7.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_7.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de video">
               </div>
             </div>
           </div>
@@ -122,10 +126,10 @@
         <div class="moduloTitle container">
             <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-1">
-                <p class="maintitle">Una agencia de branding es como cuando tu madre te dice que te cambies de gayumbos por si acabas en el hospital pero <span class="secondary">para tu marca.</span></p>
+                <p class="maintitle">Una agencia de branding es como cuando tu madre te dice que te cambies de gayumbos por si acabas en el hospital pero <span class="secondary animate__animated animate__fadeIn">para tu marca.</span></p>
             </div>
-            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-                <img src="images/imagen_14.webp" alt="">
+            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+                <img src="images/imagen_14.webp" alt="Imagen de un fotomontaje de branding">
             </div>
         </div>
         </div>
@@ -234,14 +238,14 @@
         <div class="moduloTitle row">
             <div class="col-lg-2 col-md-2 col-sm-1">
                 <div>
-                    <p class="maintitle">Una agencia de branding es como si tuvieras una varita mágica de la molonidad pero <span class="terciary">para tu marca.</span></p>
+                    <p class="maintitle">Una agencia de branding es como si tuvieras una varita mágica de la molonidad pero <span class="terciary animate__animated animate__fadeIn">para tu marca.</span></p>
                 </div>
                 <div>
                     <p>No te quedes con las ganas y echa un vistazo a nuestros proyectos. Envueltos para regalo. Explicaditos. Canela en rama, para el señor y para la señorita.</p>
                 </div>
             </div>
-            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-                <img src="images/imagen_15.webp" alt="">
+            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+                <img src="images/imagen_15.webp" alt="Imagen de un fotomontaje de branding">
             </div>
         </div>
     </div>
@@ -250,39 +254,39 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/imagen_16.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_16.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño web">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_17.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_17.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_18.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_18.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
             </div>
         </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/imagen_19.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_19.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de animación">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_20.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_20.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño web">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_21.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_21.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
             </div>
         </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/imagen_22.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_22.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de branding">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_23.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_23.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de folletería">
               </div>
               <div class="carousel-item">
-                <img src="images/imagen_24.webp" class="d-block w-100" alt="...">
+                <img src="images/imagen_24.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
             </div>
         </div>
@@ -291,7 +295,7 @@
     <!– Módulo 3 –>
     <section class="modulo3">
         <div class="titleModulo3">
-            <p class="maintitleDark">Sólo hacemos cuatro cosas, pero... <span class="secondary">¡qué cuatro cosas!</span></p>
+            <p class="maintitleDark">Sólo hacemos cuatro cosas, pero... <span class="secondary animate__animated animate__fadeIn">¡qué cuatro cosas!</span></p>
             <p class="dark">Descubre más sobre los servicios que ofrecemos para ayudar a empresas en estrategia, diseño, comunicación y tecnología.</p>
         </div>
 
@@ -344,12 +348,12 @@
 
         <div class="servicios container">
             <div class="row">
-            <div class="col-lg-3 col-md-1 col-sm-1">
-                <p class="maintitleDark">Nuestros servicios como <span class="secondary">agencia de branding</span></p>
+            <div class="col-lg-3 col-md-2 col-sm-1">
+                <p class="maintitleDark">Nuestros servicios como <span class="secondary animate__animated animate__fadeIn">agencia de branding</span></p>
                 <p class="dark">Descubre más sobre los servicios que ofrecemos para ayudar a empresas en estrategia, diseño, comunicación y tecnología.</p>
             </div>
 
-            <div class="col-lg-3 col-md-1 col-sm-1">
+            <div class="col-lg-3 col-md-2 col-sm-1">
                 <ul>
                     <li>Consultoría y estrategia de marca</li>
                     <li>Diseño de logotipos</li>
@@ -361,7 +365,7 @@
                 </ul>
             </div>
 
-            <div class="col-lg-3 col-md-1 col-sm-1">
+            <div class="col-lg-3 col-md-2 col-sm-1">
                 <ul>
                     <li>Identidad visual</li>
                     <li>Diseño de identidad corporativa</li>
@@ -386,12 +390,12 @@
         </div>
         <div class="col-lg-2 col-md-1 col-sm-1">
             <ul>
-                <li><a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
+                <li><a href="https://www.instagram.com/manijastudio/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.tiktok.com/@manijastudio" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://twitter.com/ManijaStudio" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/studiomanija" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/manija-studio/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.behance.net/manijastudio" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
             </ul>
             <p class="dark">Todos los derechos están torcidos 2023 © Manija Studio</p>
         </div>
