--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,86 +2,92 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Si queres comunicarte con nosotros no uses telepatía, escribinos.">
+    <meta name="keywords" content="contacto, comunicación, formulario, teléfono, whatsapp, mail">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/logo_mobile.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../estilos.css">
 
     <title>Contacto</title>
 </head>
-<body>
+<body class="dark">
 
     <!– Menu de navegación –>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Audiovisual.html">Audiovisual</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="diseno.html">Diseño web</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="proyectos.html">Nuestros proyectos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Audiovisual.html">Audiovisual</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="diseno.html">Diseño web</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="proyectos.html">Nuestros proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                    </ul>
+            </div>
         </div>
     </nav>
 
 
 
     <!– Módulo principal –>
-    <main class="mainDark">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                <h1 class="light" style="text-align: center;">No busques más, <span class="secondary">que estamos aquí :-)</span></h1>
+    <main class="container mainDark">
+        <div class="row">
+            <h1 class="light" style="text-align: center;">No busques más, <span class="secondary animate__animated animate__fadeIn">que estamos aquí :-)</span></h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-1">
+                <p><b>Somos todo oídos, orejas y cerebros y,</b> como la gente que te ayuda, estamos donde necesites. Listos y dispuestos para tomar un café, charlar y echarte una mano.</p>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-1">
+                <p>Escríbinos desde aquí o, si lo preferís:</p>
+                <p>Llámanos al <a href="">+541163236763</a></p>
+                <p>Escríbenos a <a href="">manijastudio@gmail.com</a></p>
+            </div>
+        </div>
+        <div>
+            <form class="contacto" action="">
                 <div class="row">
                     <div class="col-lg-2 col-md-1 col-sm-1">
-                        <p><b>Somos todo oídos, orejas y cerebros y,</b> como la gente que te ayuda, estamos donde necesites. Listos y dispuestos para tomar un café, charlar y echarte una mano.</p>
-                    </div>
-                    <div class="col-lg-2 col-md-1 col-sm-1">
-                        <p>Escríbinos desde aquí o, si lo preferís:</p>
-                        <p>Llámanos al <a href="">+541163236763</a></p>
-                        <p>Escríbenos a <a href="">manijastudio@gmail.com</a></p>
+                        <div>
+                            Nombre<br><input type="Nombre">
+                        </div>
+                        <div>
+                            Mail<br><input type="email" name="Mail" id="">
+                        </div>
                     </div>
                 </div>
-                <form action="">
-                    <div>
-                        <div>
-                            Nombre <input type="Nombre">
-                        </div>
-                        <div>
-                            Mail <input type="email" name="Mail" id="">
-                        </div>
-                    </div>
-                    <div>
-                        Mensaje <input type="text" name="" id="">
+                <div class="row">
+                    <div class="col-lg-1 col-md-1 col-sm-1">
+                        Mensaje<br><input type="text" name="" id="">
                     </div>
                     <div>
                         <div>
-                            <input type="checkbox" name="" id="">
+                            <input type="checkbox" name="" id=""><br>
                             <p>Aceptas que Manija Studio use los datos que proporcionaste para poder enviarte correos electrónicos.</p>
                         </div>
                     </div>
-                    <button type="submit">Enviar</button>
-                </form>
+                    <button class="enviar" type="submit">Enviar</button>
                 </div>
-            </div>
-    </div>
+            </form>
+        </div>
+        </div>
     </main>
 
 
@@ -95,12 +101,12 @@
         </div>
         <div class="col-lg-2 col-md-1 col-sm-1">
             <ul>
-                <li><a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li><a href="" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
+                <li><a href="https://www.instagram.com/manijastudio/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.tiktok.com/@manijastudio" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://twitter.com/ManijaStudio" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/studiomanija" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/manija-studio/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.behance.net/manijastudio" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
             </ul>
             <p class="dark">Todos los derechos están torcidos 2023 © Manija Studio</p>
         </div>
