--- a/pages/diseno.html
+++ b/pages/diseno.html
@@ -2,10 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="¿Hacemos diseño?, obvio, lo que quieras lo diseñamos.">
+    <meta name="keywords" content="diseño, web, fotomontaje, gifs, ilustración, branding, logos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/logo_mobile.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../estilos.css">
 
     <title>Diseño</title>
@@ -15,7 +18,7 @@
     <!– Menu de navegación –>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
+          <a class="navbar-brand" href="../index.html"><img src="../images/logo_desktop.svg" alt="Imagen del logo de Manija Studio"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,7 +49,7 @@
     <div class="container">
         <div class="row">
         <div class="contenedor col-lg-2 col-md-2 col-sm-1">
-            <h1>La agencia de diseño web que te ayuda a crear experiencias digitales que transforman percepciones y <span class="secondary">mejoran tu marca.</span></h1>
+            <h1>La agencia de diseño web que te ayuda a crear experiencias digitales que transforman percepciones y <span class="secondary animate__animated animate__fadeIn">mejoran tu marca.</span></h1>
             <div>
                 <div>
                     <p class="dark">Descubre cómo, desde el análisis tecnológico y la arquitectura de la información, desarrollamos webs, aplicaciones y productos digitales diseñados para cautivar, cumplir objetivos y narrar tu historia.</p>
@@ -72,18 +75,18 @@
                 </form>
             </div>
         </div>
-        <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-            <img src="../images/imagen_25.webp" alt="">
+        <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+            <img src="../images/imagen_25.webp" alt="Imagen de un fotomontaje de diseño">
         </div>
         </div>
     </div>
 </main>
 
 
-    <!– Noticias –>
-    <div class="noticias">
-        <p>Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - </p>
-    </div>
+<!– Noticias –>
+<marquee class="noticias">
+    <p> - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - Solicita tu consultoría gratis - </p>
+</marquee>
 
 
 
@@ -94,38 +97,38 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../images/imagen_2.webp" class="d-block w-100" alt="...">
+                <img src="../images/imagen_2.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de fotografía">
               </div>
               <div class="carousel-item">
-                <img src="../images/imagen_3.webp" class="d-block w-100" alt="...">
+                <img src="../images/imagen_3.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño web">
               </div>
               <div class="carousel-item">
-                <img src="../images/imagen_4.webp" class="d-block w-100" alt="...">
+                <img src="../images/imagen_4.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
             </div>
           </div>
 
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../images/imagen_5.webp" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../images/imagen_6.webp" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../images/imagen_7.webp" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item active">
+                    <img src="../images/imagen_5.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de folletería">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/imagen_6.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/imagen_7.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de video">
+                </div>
             </div>
           </div>
 
         <div class="moduloTitle container">
             <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-1">
-                <p class="maintitle"><span class="secondary">Una agencia de diseño web</span> es como tu cuñado en Nochevieja pero sabiendo.</p>
+                <p class="maintitle"><span class="secondary animate__animated animate__fadeIn">Una agencia de diseño web</span> es como tu cuñado en Nochevieja pero sabiendo.</p>
             </div>
-            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-                <img src="images/imagen_26.webp" alt="">
+            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+                <img src="../images/imagen_26.webp" alt="Imagen de un fotomontaje de diseño">
             </div>
         </div>
         </div>
@@ -224,11 +227,9 @@
               </div>
             </div>
           </div>
-          </section>
+        </section>
 
 
-
-    
 
           <!– Módulo 2 –>
           <section class="modulo2">
@@ -236,14 +237,14 @@
               <div class="moduloTitle row">
                   <div class="col-lg-2 col-md-2 col-sm-1">
                       <div>
-                    <p class="maintitle"><span class="terciary">Una agencia de diseño web </span> es como cuando te dicen que ordenes tu cuarto pero tú crees que ya está ordenado.</p>
+                    <p class="maintitle"><span class="terciary animate__animated animate__fadeIn">Una agencia de diseño web </span> es como cuando te dicen que ordenes tu cuarto pero tú crees que ya está ordenado.</p>
                 </div>
                 <div>
                     <p>No te quedes con las ganas y echa un vistazo a nuestros proyectos. Envueltos para regalo. Explicaditos. Canela en rama, para el señor y para la señorita.</p>
                 </div>
             </div>
-            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1">
-                <img src="../images/imagen_27.webp" alt="">
+            <div class="imagenPrimaria col-lg-2 col-md-2 col-sm-1 animate__animated animate__shakeY">
+                <img src="../images/imagen_27.webp" alt="Imagen de un fotomontaje de diseño">
             </div>
         </div>
     </div>
@@ -252,26 +253,26 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../images/imagen_28.webp" class="d-block w-100" alt="...">
+                  <img src="../images/imagen_28.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
               <div class="carousel-item">
-                <img src="../images/imagen_29.webp" class="d-block w-100" alt="...">
+                  <img src="../images/imagen_29.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
               <div class="carousel-item">
-                <img src="../images/imagen_30.webp" class="d-block w-100" alt="...">
+                  <img src="../images/imagen_30.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño gráfico">
               </div>
             </div>
         </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../images/imagen_31.webp" class="d-block w-100" alt="...">
+                  <img src="../images/imagen_31.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño web">
               </div>
               <div class="carousel-item">
-                <img src="../images/imagen_32.webp" class="d-block w-100" alt="...">
+                  <img src="../images/imagen_32.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño web">
               </div>
               <div class="carousel-item">
-                <img src="../images/imagen_33.webp" class="d-block w-100" alt="...">
+                  <img src="../images/imagen_33.webp" class="d-block w-100" alt="Imagen de uno de nuestros trabajos de diseño web">
             </div>
           </div>
       </div>
@@ -282,11 +283,11 @@
   <!– Módulo 3 –>
   <section class="modulo3">
       <div class="titleModulo3">
-          <p class="maintitleDark">Sólo hacemos cuatro cosas, pero... <span class="secondary">¡qué cuatro cosas!</span></p>
+          <p class="maintitleDark">Sólo hacemos cuatro cosas, pero... <span class="secondary animate__animated animate__fadeIn">¡qué cuatro cosas!</span></p>
           <p class="dark">Descubre más sobre los servicios que ofrecemos para ayudar a empresas en estrategia, diseño, comunicación y tecnología.</p>
       </div>
 
-    
+
 
     <div class="cajas">
         <div class="cajas row">
@@ -334,12 +335,12 @@
 
     <div class="servicios container">
         <div class="row">
-        <div class="col-lg-3 col-md-1 col-sm-1">
-            <p class="maintitleDark">Nuestros servicios como <span class="secondary">agencia de branding</span></p>
+        <div class="col-lg-3 col-md-2 col-sm-1">
+            <p class="maintitleDark">Nuestros servicios como <span class="secondary animate__animated animate__fadeIn">agencia de branding</span></p>
             <p class="dark">Descubre más sobre los servicios que ofrecemos para ayudar a empresas en estrategia, diseño, comunicación y tecnología.</p>
         </div>
 
-        <div class="col-lg-3 col-md-1 col-sm-1">
+        <div class="col-lg-3 col-md-2 col-sm-1">
             <ul>
                 <li>Consultoría y estrategia de marca</li>
                 <li>Diseño de logotipos</li>
@@ -351,7 +352,7 @@
             </ul>
         </div>
 
-        <div class="col-lg-3 col-md-1 col-sm-1">
+        <div class="col-lg-3 col-md-2 col-sm-1">
             <ul>
                 <li>Identidad visual</li>
                 <li>Diseño de identidad corporativa</li>
@@ -376,12 +377,12 @@
     </div>
     <div class="col-lg-2 col-md-1 col-sm-1">
         <ul>
-            <li><a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-            <li><a href="" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
+            <li><a href="https://www.instagram.com/manijastudio/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.tiktok.com/@manijastudio" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+            <li><a href="https://twitter.com/ManijaStudio" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/studiomanija" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/manija-studio/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.behance.net/manijastudio" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
         </ul>
         <p class="dark">Todos los derechos están torcidos 2023 © Manija Studio</p>
     </div>
