--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="pages/Audiovisual.html">Audiovisual</a>
+                    <a class="nav-link" href="pages/audiovisual.html">Audiovisual</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="pages/diseno.html">Diseño web</a>
