--- a/pages/audiovisual.html
+++ b/pages/audiovisual.html
@@ -28,7 +28,7 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Audiovisual.html">Audiovisual</a>
+                <a class="nav-link" href="audiovisual.html">Audiovisual</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="diseno.html">Diseño web</a>
