Ajuste estilos de inputs y botones

--- a/pages/audiovisual.html
+++ b/pages/audiovisual.html
@@ -60,18 +60,16 @@
                         <p class="etiqueta">Solicita tu consultoría gratis</p>
                     </div>
                     <div>
-                        Nombre<br><input type="Nombre">
+                        Nombre<br><input type="Nombre" id="input">
                     </div>
                     <div>
-                        Mail<br><input type="email" name="Mail" id="">
+                        Mail<br><input type="email" name="Mail" id="input">
                     </div>
                     <div class="checkbox">
-                        <input type="checkbox" name="" id="">
+                        <input type="checkbox" name="" id="checkbox">
                         <p class="dark">Aceptas que Manija Studio use los datos que proporcionaste para poder enviarte correos electrónicos.</p>
                     </div>
-                    <div>
-                        <button type="submit">Enviar</button>
-                    </div>
+                    <button id="button" type="submit">Enviar</button>
                 </form>
             </div>
         </div>
