--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,26 +64,22 @@
         <div>
             <form class="contacto" action="">
                 <div class="row">
-                    <div class="col-lg-2 col-md-1 col-sm-1">
-                        <div>
-                            Nombre<br><input type="Nombre">
+                        <div class="col-lg-2 col-md-1 col-sm-1">
+                            Nombre<br><input type="Nombre" id="inputDark">
                         </div>
-                        <div>
-                            Mail<br><input type="email" name="Mail" id="">
+                        <div class="col-lg-2 col-md-1 col-sm-1">
+                            Mail<br><input type="email" name="Mail" id="inputDark">
                         </div>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-1 col-md-1 col-sm-1">
-                        Mensaje<br><input type="text" name="" id="">
-                    </div>
                     <div>
-                        <div>
-                            <input type="checkbox" name="" id=""><br>
-                            <p>Aceptas que Manija Studio use los datos que proporcionaste para poder enviarte correos electrónicos.</p>
-                        </div>
+                        Mensaje<br><input type="text" name="Mensaje" id="inputDark">
                     </div>
-                    <button class="enviar" type="submit">Enviar</button>
+                    <div class="checkbox">
+                        <input type="checkbox" name="checkbox" id="checkbox">
+                        <p>Aceptas que Manija Studio use los datos que proporcionaste para poder enviarte correos electrónicos.</p>
+                    </div>
+                    <button id="button" type="submit">Enviar</button>
                 </div>
             </form>
         </div>
