--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
           <article class="cajadark col-lg-4 col-md-1 col-sm-1">
             <div>
-              <h3 class="secondary">Nuestros proyetos</h3>
+              <h3 class="secondary">Nuestros proyectos</h3>
               <p>
                 UI/UX y arquitectura de la información para crear sitios y
                 productos que funcionan.
@@ -632,7 +632,7 @@
             </div>
             <div>
               <a class="light" href="pages/proyectos.html"
-                >Ver más Nuestros proyetos
+                >Ver más Nuestros proyectos
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
             </div>
