--- a/pages/diseno.html
+++ b/pages/diseno.html
@@ -598,7 +598,7 @@
 
           <article class="cajadark col-lg-4 col-md-1 col-sm-1">
             <div>
-              <h3 class="secondary">Nuestros proyetos</h3>
+              <h3 class="secondary">Nuestros proyectos</h3>
               <p>
                 UI/UX y arquitectura de la información para crear sitios y
                 productos que funcionan.
@@ -606,7 +606,7 @@
             </div>
             <div>
               <a class="light" href="proyectos.html"
-                >Ver más Nuestros proyetos
+                >Ver más Nuestros proyectos
                 <i class="fa-solid fa-chevron-right"></i
               ></a>
             </div>
